<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_entrance_color"
    android:layout_height="match_parent"
    tools:context=".AuthenticatorActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/text_color"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textSize="25sp"
        android:text="@string/authorization" />

    <EditText
        android:id="@+id/login_authenticator"
        android:layout_marginTop="40dp"
        android:textColor="@color/text_color"
        android:layout_width="220sp"
        android:layout_gravity="center"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/hint_color"
        android:hint="@string/hint_logo" />

    <EditText
        android:id="@+id/password_authenticator"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color"
        android:layout_width="220sp"
        android:layout_gravity="center"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:hint="@string/hint_password"  />

    <Button
        android:id="@+id/but_authenticator"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:backgroundTint="@color/text_color"
        android:textColor="@color/bg_color"
        android:textSize="16dp"
        android:text="@string/but_entrance" />

    <TextView
        android:id="@+id/but_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter"
        android:text="@string/but_registration"
        android:textColor="@color/but_text_reg"
        android:textSize="19sp" />

</LinearLayout>